@@ -59,6 +59,9 @@
 [seaking_server_1.0.0.1 2013-10-10 张春生]
 1、新功能：增加获得昵称功能
 
+[seaking_server_1.0.0.1 2013-10-11 张春生]
+1、新功能：增加删除角色功能
+
 --备注分类
 1、新功能：
 2、Bug:
